# rubbish-collection

./: .copier-answers.yml  .coveragerc  .docsignore  .pre-commit-config.yaml  Dockerfile  c4model.puml  docker-compose.yml  erd.puml  insert-test-data.sh  manage.py  mkdocs.yml  pyproject.toml  tox.ini
.gitlab/: webapp.gitlab-ci.yml
api/: __init__.py  apps.py  authentication.py  urls.py  versions.py  views.py
api/tests/: test_versions_view.py
api/v1alpha/: address_view.py  collection_schedule_view.py  rubbish_type_view.py  urls.py  views.py
api/v1alpha/tests/: helpers.py  test_address_view.py  test_collection_schedule_view.py  test_rubbish_type_view.py
docs/: index.md  mkdocs-base.yml
docs/scripts/: gen-reference-nav.py
rubbish_collection/: __init__.py  admin.py  apps.py  defaultsettings.py  models.py  systemchecks.py
rubbish_collection/migrations/: 0001_initial.py
rubbish_collection/tests/: test_checks.py
rubbish_collection_project/: urls.py  wsgi.py
rubbish_collection_project/settings/: __init__.py  base.py  developer.py  testing.py
ui/: apps.py
ui/frontend/: package-lock.json  package.json
ui/frontend/public/: index.html  manifest.json
ui/frontend/src/: AddressPicker.test.tsx  AddressPicker.tsx  AddressView.test.tsx  AddressView.tsx  App.tsx  RubbishCollectionDay.test.tsx  RubbishCollectionDay.tsx  RubbishCollectionDayResult.test.tsx  RubbishCollectionDayResult.tsx  RubbishCollectionDayView.test.tsx  RubbishCollectionDayView.tsx  types.ts
